[package]
name = "as-srt"
authors = ["Caleb Leinz <caleb@leinz.io>", "Hieu Nguyen <nthieu173@gmail.com>"]
license = "MPL-2.0"
description = "Idiomatic rust bindings to the C++ implementation of SRT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cmleinz/as-srt"

[dependencies]
libsrt-sys = { path = "libsrt-sys", version = "*" }
libc = "0.2"
futures = "0.3"

os_socketaddr = "0.2.4"
thiserror = "1.0.40"


[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winsock2"] }

[features]
static = ["libsrt-sys/static"]
