[package]
name = "libsrt-sys"
authors = ["Caleb Leinz <caleb@leinz.io>", "Hieu Nguyen <nthieu173@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Bindgen bindings to SRT"
links = "srt"
build = "build.rs"
repository = "https://github.com/cmleinz/as-srt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link-cplusplus = "1.0"
openssl-sys = "0.7"

[build-dependencies]
cmake = "0.1"
bindgen = "0.56"

[features]
static = []